# sigprofsim_wrapper

./: .gitignore  0_install_sigprofgen.py  1_run_sps.py  2_push.py  pyproject.toml  readme.md  remote_template.py  split vcfs.ipynb
vcfs/: parse.ipynb
